config/demo/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: auth-system
spec:
  selector:
    app: dex
  ports:
    - name: http
      port: 5556
      targetPort: 5556
